// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ChatBubble from user with avatar as react element unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <span>
        USER
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble from user with avatar unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
    </div>
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <img
        alt="User"
        class="memori-chat--bubble-avatar-img"
        src="https://picsum.photos/200"
      />
    </picture>
  </div>
</div>
`;

exports[`renders ChatBubble from user with custom avatar unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
    </div>
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <img
        alt="User"
        class="memori-chat--bubble-avatar-img"
        src="https://picsum.photos/200"
      />
    </picture>
  </div>
</div>
`;

exports[`renders ChatBubble unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        <p>
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 1 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        <p>
          Per calcolare l'ipotenusa di un triangolo rettangolo, puoi usare il Teorema di Pitagora. Il teorema afferma che in un triangolo rettangolo, il quadrato dell'ipotenusa (la lato opposto all'angolo retto) è uguale alla somma dei quadrati degli altri due lati.
        </p>
        <br />
        <p>
          La formula è:
        </p>
        <br />
        <p>
          \\[ c = \\sqrt{a^2 + b^2} \\]
        </p>
        <br />
        <p>
          Dove:
          <br />
          - \\( c \\) è l'ipotenusa.
          <br />
          - \\( a \\) e \\( b \\) sono i due cateti del triangolo.
        </p>
        <br />
        <h3>
          Passaggi per il Calcolo
        </h3>
        <br />
        <ol>
          <br />
          <li>
            <p>
              <strong>
                Misura o identifica i cateti \\( a \\) e \\( b \\)
              </strong>
              :
              <br />
              I cateti sono i due lati che formano l'angolo retto.
            </p>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Calcola i quadrati dei cateti
              </strong>
              :
              <br />
              Eleva al quadrato entrambe le misure dei cateti: \\( a^2 \\) e \\( b^2 \\).
            </p>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Somma i quadrati dei cateti
              </strong>
              :
              <br />
              Somma i risultati ottenuti: \\( a^2 + b^2 \\).
            </p>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Calcola la radice quadrata della somma
              </strong>
              :
              <br />
              Prendi la radice quadrata della somma per trovare l'ipotenusa: \\( c = \\sqrt{a^2 + b^2} \\).
            </p>
            <br />
          </li>
          <br />
        </ol>
        <br />
        <h3>
          Esempio di Calcolo
        </h3>
        <br />
        <p>
          Supponiamo di avere un triangolo rettangolo con i cateti di lunghezza 3 cm e 4 cm.
        </p>
        <br />
        <ol>
          <br />
          <li>
            <strong>
              Cateto \\( a \\)
            </strong>
            : 3 cm
          </li>
          <br />
          <li>
            <strong>
              Cateto \\( b \\)
            </strong>
            : 4 cm
          </li>
          <br />
        </ol>
        <br />
        <p>
          Usiamo la formula:
        </p>
        <br />
        <p>
          \\[ c = \\sqrt{a^2 + b^2} \\]
        </p>
        <br />
        <p>
          \\[ c = \\sqrt{(3 , \\text{cm})^2 + (4 , \\text{cm})^2} \\]
        </p>
        <br />
        <p>
          \\[ c = \\sqrt{9 , \\text{cm}^2 + 16 , \\text{cm}^2} \\]
        </p>
        <br />
        <p>
          \\[ c = \\sqrt{25 , \\text{cm}^2} \\]
        </p>
        <br />
        <p>
          \\[ c = 5 , \\text{cm} \\]
        </p>
        <br />
        <p>
          Quindi, l'ipotenusa del triangolo è di 5 cm.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 2 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        <p>
          Per calcolare le resistenze dei materiali per le verifiche rispetto ad azioni antropiche e ambientali secondo la Specifica Tecnica ST-VAL4, si procede in questo modo:
        </p>
        <br />
        <ol>
          <br />
          <li>
            <p>
              <strong>
                Determinazione della resistenza dei materiali:
              </strong>
              <br />
              La resistenza dei materiali da utilizzare nelle verifiche accurate si determina a partire dalle indagini sull’opera. La caratterizzazione deve essere distinta per tutti i materiali presenti nell'opera, in accordo con la ST-PI. Le resistenze per verifiche rispetto ad azioni antropiche come i carichi da traffico e le azioni ambientali sono definite dalle LG20. Questo include la distinzione rispetto a quelle utilizzate per le azioni sismiche, come dettagliato dalle NTC18 e CIR19  .
            </p>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Calcolo della resistenza:
              </strong>
              <br />
              Il valore della resistenza dei materiali \\( f_d \\) da utilizzare nelle verifiche per carichi gravitazionali si ottiene mediante la seguente espressione:
            </p>
            <br />
            <p>
              \\[
              <br />
              f_d = \\min \\left( \\frac{f_m}{FC \\cdot \\gamma_M}, \\frac{f_k}{FC} \\right)
              <br />
              \\]
            </p>
            <br />
            <p>
              Dove:
            </p>
            <br />
            <ul>
              <br />
              <li>
                \\( f_m \\) è il valor medio della resistenza valutato dai risultati delle prove effettuate sui campioni prelevati in situ;
              </li>
              <br />
              <li>
                \\( f_k \\) è la resistenza caratteristica calcolata sulla base dei risultati delle prove sui campioni prelevati in situ;
              </li>
              <br />
              <li>
                \\( FC \\) è il Fattore di Confidenza associato al Livello di Conoscenza raggiunto;
              </li>
              <br />
              <li>
                \\( \\gamma_M \\) è il fattore parziale di sicurezza del materiale   .
              </li>
              <br />
            </ul>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Caratterizzazione dei materiali:
              </strong>
              <br />
              I valori medi, caratteristici e di progetto delle resistenze a compressione e trazione per il calcestruzzo, e delle resistenze a snervamento per l’acciaio ordinario sono determinati a partire dai risultati delle prove. Specifiche espressioni e metodi sono forniti per diversi materiali nell'Appendice 13 della ST-VAL4  .
            </p>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Stima della resistenza da prove non distruttive:
              </strong>
              <br />
              Per valutare le resistenze dei materiali, si possono anche utilizzare prove non distruttive come le prove SonReb per il calcestruzzo e le prove di durezza per l'acciaio ordinario e armonico. Formulazioni specifiche per queste prove si trovano in Appendice al §13.1 della ST-VAL4 .
            </p>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Analisi dei risultati delle indagini:
              </strong>
              <br />
              Gli esiti delle prove devono essere attentamente analizzati per confermare le caratteristiche originarie o rilevare eventuali decadimenti del materiale. Questo processo include anche l'identificazione delle cause di dispersione significative nei risultati delle prove  .
            </p>
            <br />
          </li>
          <br />
        </ol>
        <br />
        <p>
          Seguendo questi passaggi, si ottiene una stima accurata delle resistenze dei materiali che possono essere utilizzate per le verifiche di sicurezza rispetto ad azioni antropiche e ambientali.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with initial msg unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-initial"
  />
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        <p>
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with markdown and breakline unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        <p>
          Per l'avvio di una progettualità è necessario fornire le seguenti informazioni:
          <br />
          - Natura dell'esigenza progettuale e obiettivi
          <br />
          - Descrizione del progetto
          <br />
          - Prima identificazione delle risorse necessarie
          <br />
          - Costi stimati
          <br />
          - Benefici attesi
          <br />
          - Rischi identificati.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with markdown unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        <h2>
          Test
        </h2>
        <br />
        <p>
          Ecco tutte le possibili personalizzazioni che puoi applicare:
        </p>
        <br />
        <ul>
          <br />
          <li>
            <p>
              <strong>
                Colletto
              </strong>
              :
            </p>
            <br />
            <ul>
              <br />
              <li>
                Girocollo
              </li>
              <br />
              <li>
                Scollo a V
              </li>
              <br />
            </ul>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Manica
              </strong>
              :
            </p>
            <br />
            <ul>
              <br />
              <li>
                Manica Lunga
              </li>
              <br />
              <li>
                Manica Corta
              </li>
              <br />
            </ul>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Taglia
              </strong>
              :
            </p>
            <br />
            <ul>
              <br />
              <li>
                XS
              </li>
              <br />
              <li>
                S
              </li>
              <br />
              <li>
                M
              </li>
              <br />
              <li>
                L
              </li>
              <br />
              <li>
                XL
              </li>
              <br />
              <li>
                XXL
              </li>
              <br />
              <li>
                3XL
              </li>
              <br />
            </ul>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Posizione Stampa
              </strong>
              :
            </p>
            <br />
            <ul>
              <br />
              <li>
                Fronte Petto
              </li>
              <br />
              <li>
                Retro Schiena
              </li>
              <br />
              <li>
                Fronte DX
              </li>
              <br />
              <li>
                Fronte SX
              </li>
              <br />
            </ul>
            <br />
          </li>
          <br />
          <li>
            <p>
              <strong>
                Generazione Immagine
              </strong>
              :
            </p>
            <br />
            <ul>
              <br />
              <li>
                Prompt generazione immagine
              </li>
              <br />
            </ul>
            <br />
          </li>
          <br />
        </ul>
        <br />
        <p>
          Seleziona le personalizzazioni che desideri applicare.
        </p>
        <br />
        <p>
          \\[Vedi altro\\](
          <a
            href="https://memori.ai"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://memori.ai
          </a>
          )
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with msg from BoE expert unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user memori-chat--with-addon"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble memori-chat--with-addon memori-chat--ai-generated transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left memori-chat--bubble-action-icon memori-chat--bubble-action-icon--ai"
        >
          <div
            class="memori-tooltip--content"
          >
            generatedByAI
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span>
              <svg
                aria-label="generatedByAI"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with msg generated by AI unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user memori-chat--with-addon"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble memori-chat--with-addon memori-chat--ai-generated transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left memori-chat--bubble-action-icon memori-chat--bubble-action-icon--ai"
        >
          <div
            class="memori-tooltip--content"
          >
            generatedByAI
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span>
              <svg
                aria-label="generatedByAI"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with user msg unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-chat--bubble-content"
        dir="auto"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </div>
  </div>
</div>
`;
